# srmio

./: .gitignore  .svnignore  Changes  Makefile.am  README  buf.c  chunk.c  common.c  common.h  configure.ac  d2xx.c  data.c  debug.h  error.c  file_srm.c  file_wkt.c  fixup.c  ftypes.c  genautomake.sh  gencommit.sh  genconfheader.sh  getcommit.sh  io.c  io.h  ios.c  list.c  marker.c  pc.c  pc.h  pc5.c  pc7.c  serio.c  serio.h  serios.c  seriow32.c  split.c  srmcmd.c  srmcmd.man  srmcmd.man_in  srmdata.c  (+11 more)
debian/: .svnignore  changelog  control  copyright  rules
homebrew/: srmio.rb
